# Django_ecommerce

./: .gitignore  pyproject.toml  requirements.txt
e_commers/: asgi.py  settings.py  urls.py  wsgi.py
order/: models.py  serializers.py
order/migrations/: 0001_initial.py  0002_initial.py
product_view/: models.py  serializers.py  urls.py  views.py
product_view/migrations/: 0001_initial.py  0002_initial.py  0003_productcategories_alter_product_p_category.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_seller_seller_store_name.py  0003_seller_is_active.py  0004_rename_seller_since_seller_since_and_more.py
